# wng

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  README  README.md  build.md  deploy  install.sh  release.sh  updater.sh  wng_3.5-0.deb
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  gnulinux.yml  macos.yml  rust.yml  rustUnix.yml  windows.yml
examples/: project.json
examples/src/: main.c  printlist.c  printlist.h
foo/: project.toml
foo/src/: main.c
scripts/: runtests.ps1
src/: build.rs  create.rs  install.rs  main.rs  query.rs  reinit.rs  run.rs  testing.rs
src/install/: install.rs  mod.rs  wanager.rs
src/project/: archive.rs  create.rs  header.rs  mod.rs  reinit.rs  testing.rs
t34-lib/: Cargo.toml
t34-lib/src/config/: reinit.rs  setup.rs
wng/: Cargo.toml
wng-lib/: Cargo.toml  test.conf
wng-lib/src/: build.rs  create.rs  deps.rs  errors.rs  install.rs  lib.rs  tests.rs
wng-lib/src/config/: manually.rs  mod.rs  reinit.rs  setup.rs
wng/src/: main.rs
wng_3.5-0/DEBIAN/: control
wngbuild/: wngbuild.py  wngbuild.rb
