[package]
name = "wng"
version = "3.1.0"
authors = ["Wafelack <contactme.wafelack@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
lines_from_file = "0.1.1"
see_directory = "0.2.1"
fs_extra = "1.2.0"
colored = "2"