[package]
name = "wng"
version = "3.4.1"
authors = ["Wafelack <wafelack@protonmail.com>"]
edition = "2018"
description = "wng is a package manager and project manager for the C programming language"
documentation = "https://github.com/Wmanage/wng/blob/dev/DOCS.md"
readme = "README.md"
license = "MPL-2.0"
homepage = "https://wmanage.github.io"
repository = "https://github.com/Wmanage/wng"
keywords = ["c", "build", "packages", "projects", "header"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
lines_from_file = "0.1.1"
fs_extra = "1.2.0"
colored = "2"
tar = "0.4.30"
