[package]
name = "wng-lib"
version = "0.1.0"
authors = ["Wafelack <wafelack@protonmail.com>"]
edition = "2018"
description = "The W package manager library | WNG is a C package and projects manager written in Rust."
readme = "../README"
repository = "https://github.com/wngland/wng"
license = "MPL-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
toml = "0.5.8"
git2 = "0.13.17"
fs_extra = "1.2.0"