[package]
name = "wng"
version = "4.0.0"
authors = ["Wafelack <wafelack@protonmail.com>"]
edition = "2018"
description = "The W package manager | WNG is a C package and projects manager written in Rust."
readme = "../README"
repository = "https://github.com/wngland/wng"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wng-lib = "0.1.1"
clap = "2.33.3"
is_executable = "1.0.0"